--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,6 @@
 <h1>Create your Tweet:</h1>
+<br>
 <form method="post" action="/tweets">
   <input type="text" name="content" id="content">
-
+  <input type="submit" id="submit" name="submit">
 </form>
