--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,8 +1,8 @@
 <h1>Sign-Up Here!</h1>
-<form>
+<form method="post" action="/signup">
   <p>Username: <input type="text" name="username" id="username" required></p>
   <p>Password: <input type="text" name="password" id="password" required></p>
   <p>Email: <input type="text" name="email" id="email" required></p>
-  <input type="submit" name="submit" id="submit">
+  <input type="submit" name="submit" id="submit" value="Sign Up">
 
 </form>
