--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,5 @@
 <div>Should be all tweets in here!</div>
 
 <h1>Welcome, <%=@user.username%></h1>
+
+<h3>If you would like to Log Out, click <a href="/logout">here</a></h3>
